add test and changelog